--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.38.1",
-    "@types/node": "^20.6.3"
+    "@types/node": "^20.8.2",
+    "require": "^0.4.4"
   }
 }
