--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^8.2.0",
-    "@playwright/test": "^1.38.1",
+    "@playwright/test": "^1.39.0",
     "@types/node": "^20.8.3",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
+    "allure-playwright": "^2.9.2",
     "eslint": "^8.52.0",
     "eslint-plugin-playwright": "^0.18.0",
     "require": "^0.4.4"
