--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^20.8.3",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
+    "allure-commandline": "^2.24.1",
     "allure-playwright": "^2.9.2",
     "eslint": "^8.52.0",
     "eslint-plugin-playwright": "^0.18.0",
