--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,6 +6,7 @@ on:
     branches: [ main, master ]
 jobs:
   test:
+    name: Run all tests
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
