The part of the tests added to the yml file - proper folder chosen

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
-      run: npx playwright test my_tests
+      run: npx playwright test my_tests/tests_in_general
     - uses: actions/upload-artifact@v3
       if: always()
       with:
