--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
-../allure-report/*
-../allure-results/*
+allure-report/*
+allure-results/*
 
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
