--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -22,11 +22,11 @@ jobs:
       run: npx playwright test tests_in_general/1.home.spec.ts
     - uses: actions/upload-artifact@v3
       if: always()
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
       # with:
-      #   name: Test-results
-      #   path: test-results
+      #   name: playwright-report
+      #   path: playwright-report/
       #   retention-days: 30
+      with:
+        name: Test-results
+        path: test-results
+        retention-days: 30
